# Script-for-CSV

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
reports/: base_report.py  report_factory.py  student_performance.py
tests/: test_base_report.py  test_file_reader.py  test_main.py  test_report_factory.py  test_student_performance.py
utils/: file_reader.py
